--- a/views/administrador/form.pug
+++ b/views/administrador/form.pug
@@ -2,4 +2,5 @@ extends layout
 
 block content
   include ../forms/formPaciente.pug
-  +formPaciente("divForm",editarPaciente,false,)
+  .container.bordeAzul
+   +formPaciente("divForm",editarPaciente,false,)
