--- a/views/forms/formOrden.pug
+++ b/views/forms/formOrden.pug
@@ -1,6 +1,7 @@
-mixin formOrden(divFormOrden,editar, oculto,orden)
+mixin formOrden(divFormOrden,editar, oculto=true,orden)
  .container.d-flex.justify-content-center(id=divFormOrden class=oculto ?"oculto":"")
-  form(action=editar?`/admins2/orden/${orden.id}?_method=put`:`/admins2/orden/` method="post" class="formOrden")
+  - console.log("OCULTO --> ",oculto)
+  form(action=editar?`/admins2/orden/${orden.id}?_method=put`:`/admins2/orden/` method="post" class=`formOrden ${oculto ? "oculto" : ""}`)
       // input(type="hidden" name="PacienteId" value=paciente.id)
       input(type="hidden" name="MedicoId" value=editar?orden.Medico.id:'')
       input(type="hidden" name="DiagnosticoId" value=editar?orden.Diagnostico.id:'')
