--- a/views/portal/inicio.pug
+++ b/views/portal/inicio.pug
@@ -2,7 +2,7 @@ extends layout
 append styles 
       link(rel='stylesheet', href='/stylesheets/tecBioq/inputSearch.css')
       link(rel='stylesheet', href='/stylesheets/tecBioq/lista.css')
-include ./inputSearch.pug
+include ../tecBioq/inputSearch.pug
 block content
  div.container.mt-5(id="divContentLista" )
   .row.justify-content-center
