--- a/views/tecBioq/addCategDet.pug
+++ b/views/tecBioq/addCategDet.pug
@@ -10,7 +10,7 @@ block content
      .row
       include ./menuLateralExamen.pug
       .col.bordeAzul
-       if categorias.length > 0
+       if exCategs.length > 0
         .row.tablaConValoresExistentes
           +tablaCategDet(false,"tabla1")
        .row.mt-5
