--- a/public/stylesheets/admins2/clickUsuario.css
+++ b/public/stylesheets/admins2/clickUsuario.css
@@ -1,12 +1,21 @@
 .modal {
-    z-index: 1050;
-  }
-  
-  .modal-backdrop {
-    z-index: 1040;
-  }
+  z-index: 2000 !important;
+}
+.modal-backdrop {
+  z-index: 1990 !important;
+}
 
+#confirmarOrdenModal .modal-content {
+  width: 100%;        /* ocupa todo el ancho disponible */
+}
+#eliminarMotivoModal .modal-content {
+  width: 100%;        /* ocupa todo el ancho disponible */
+}
 
+.btn:focus,
+.btn:focus-visible {
+  box-shadow: 0 0 0 0.25rem rgba(13,110,253,.5); /* el glow azul de Bootstrap */
+}
 
 .lista-datos-usuarioEliminado {
     background-color: rgba(220, 53, 69, 0.1); 
