--- a/public/stylesheets/card.css
+++ b/public/stylesheets/card.css
@@ -1,7 +1,11 @@
 #divOrdenesNoInformadas{
     position: relative;
-    display: flex;
+   /*  display: flex; */
     flex-wrap: wrap;
+}
+
+.car{
+  position:relative
 }
 .card-flip {
     perspective: 1000px;
@@ -12,9 +16,9 @@
 .card-flip.flipped{
     z-index: 10;
     background-color: azure;
-    position: absolute; 
+   position: relative; 
     width: 100%;
-    height: 100%;
+    height: fit-content;
 }
 .card-flip .card-body {
     transition: transform 0.1s;
@@ -23,14 +27,14 @@
 
   .back {
     backface-visibility: hidden;
-     position: absolute; 
+     position: absolute;  /* para que el front y back esten superpuestas */
      background-color: azure;
    
 }
 
 .front {
     backface-visibility:visible;
-     position: relative; 
+    /*  position: relative;  */
    
 }
 
@@ -44,13 +48,17 @@
 .card-flip.flipped .front {
     transform: rotateY(180deg);
     backface-visibility: hidden;
-    
+    margin:0;
    
 }
 
 .card-flip.flipped .back {
     transform: rotateY(0deg);
+    
     backface-visibility:visible;
+}
+.flipped{
+  margin:0;
 }
 
 
