--- a/views/administrador/layout.pug
+++ b/views/administrador/layout.pug
@@ -2,21 +2,35 @@ doctype html
 html
   head
     title= title 
-    block styles  
-      link(rel='stylesheet', href='/stylesheets/tecbioq/style.css')
     block head
       //- Bloque por defecto para el head. Si no es sobrescrito, este contenido permanecerá.
       meta(charset='UTF-8')
       meta(name="viewport" content="width=device-width, initial-scale=1.0")
       link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous")
-      link(rel='stylesheet', href='/stylesheets/administrador.css')
-      link(rel='stylesheet', href='/stylesheets/card.css')
+      //link(rel='stylesheet', href='/stylesheets/administrador.css')
+      //link(rel='stylesheet', href='/stylesheets/card.css')
       script(src="https://code.jquery.com/jquery-3.7.0.js")
       link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css")
       script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous")
       script(src="/socket.io/socket.io.js")
       script(src="/javascripts/socket-client.js")
-  body 
+  
+    block styles  
+      link(rel='stylesheet', href='/stylesheets/tecbioq/style.css')
+      link(rel='stylesheet', href='/stylesheets/tecBioq/inputSearch.css')
+      link(rel='stylesheet', href='/stylesheets/tecBioq/lista.css')
+  body.d-flex.flex-column.min-vh-100.container-fluid  
+    block header
+     include navTop
+ 
+    div(class="container-fluid main-wrapper mt-5" )
+     block content
+      
+         
+    footer
+     block footer
+      p &copy; 2024 Mi sitio web       
+  //body 
     header(class="position-fixed z-2" style="top: 0; background-color: #f0f0f0;width:100%")
       block header
         include navTop
