--- a/views/administrador2/clickUsuario.pug
+++ b/views/administrador2/clickUsuario.pug
@@ -3,6 +3,7 @@ append styles
       link(rel='stylesheet', href='/stylesheets/admins2/clickUsuario.css')
       link(rel='stylesheet', href='/stylesheets/tecBioq/lista.css')
       link(rel='stylesheet', href='/stylesheets/tecBioq/formularios.css')
+      link(rel='stylesheet', href='/stylesheets/card.css')
 include ./modalEliminar 
 include ../listaDatosUsuarios 
 include ./tresPuntos 
@@ -36,8 +37,14 @@ block content
         .col.my-5
           +formBioquimico("id1",formDataBioquimico || usuario.Bioquimico || null,usuario.id,true)
           +formTecnico("id2",usuario.Tecnico,usuario.id,true)
-          +formPaciente("id3",formDataPaciente || usuario.Paciente || null,usuario.id,true)
-          +formUsuario("id4",formDataUsuario || usuario || null,!formDataUsuario) 
+          +formPaciente("id3",formDataPaciente || usuario.Paciente || null,usuario.id,true,false,true)
+          +formUsuario("id4",formDataUsuario || usuario || null,!formDataUsuario)
+       .row#rowOrdenes(class=formDataUsuario?"":"oculto") 
+        .col.my-5    
+          include ../administrador/formOrden.pug
+          - const estadosEditables=[1,2,3,4,5]
+          - const origen='putOrden'
+          include ../administrador/ordenesNoInformadas.pug
        
        .row.flex-column#rowListas(class=formDataUsuario?"oculto":"") 
         .col
@@ -85,6 +92,6 @@ block content
      
      
        script(src="/javascripts/errores.js")  
-       script(src="/javascripts/admins2/clickUsuario.js")  
-     
+       script(type="module" src="/javascripts/admins2/clickUsuario.js")  
+     script( type="module" src='/javascripts/administrador/formOrden.js')
         
