--- a/views/administrador2/menuLateralClickUsuario.pug
+++ b/views/administrador2/menuLateralClickUsuario.pug
@@ -16,6 +16,10 @@ aside(class="col-auto  me-3" )
   .border-bottom  
   ul(class="bd-links-nav list-unstyled")
    li(class="nav-item")
+    a(class="nav-link btnEditar" id="btnOrdenes") Órdenes
+  .border-bottom  
+  ul(class="bd-links-nav list-unstyled")
+   li(class="nav-item")
     a(class="nav-link btnEditar" id="btnMovimientos") Movimientos
 
    
