--- a/views/menu.pug
+++ b/views/menu.pug
@@ -8,7 +8,7 @@
             ) 
       i(class="bi bi-list")
     ul(class=" dropdown-menu dropdown-menu-end")
-     each rol in roles
+     each rol in currentUserRoles
       li
        a(class="dropdown-item" href=(rol==="Administrativo"?"http://localhost:3000/admins2"
                                                            :rol==="Recepcionista"?"http://localhost:3000/admins"
